#add_subdirectory(DQMHistos)
#add_subdirectory(DataDecoders)
#add_subdirectory(TablePluginDataFormats)
add_subdirectory(DataProcessorPlugins)
add_subdirectory(FEInterfaces)
#add_subdirectory(InterfaceTest)
add_subdirectory(ArtModules)
#add_subdirectory(Generators)
#add_subdirectory(Overlays)
#add_subdirectory(EventBuilder)
#add_subdirectory(ControlsInterfacePlugins)
#add_subdirectory(TemplateDirectory)

